[package]
name = "wrc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple telemetry library for WRC 2023."
repository = "https://github.com/stelmanjones/wrc"
categories = ["api-bindings","game-development", "network-programming"]
keywords = ["gamedev", "telemetry", "wrc", "udp", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wrc"
path = "./lib/lib.rs"

[[bin]]
name = "wrcapp"
path = "./src/main.rs"



[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bincode = "1.3.3"
chrono = "0.4.31"
clap = { version = "4.4.8", features = [
  "unstable-doc",
  "unstable-styles",
  "cargo",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
